Made lots of changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart AgriTech Dashboard - Advanced AI & Sensor Technology</title>
     <meta name="description" content="Advanced agricultural dashboard with real-time sensor monitoring, AI-powered crop recommendations, and smart farming analytics." />
-    <meta name="author" content="Debarghya Bhowmick" />
+    <meta name="author" content="Sahina & Debarghya" />
 
     <meta property="og:title" content="Smart AgriTech Dashboard - Advanced AI & Sensor Technology" />
     <meta property="og:description" content="Advanced agricultural dashboard with real-time sensor monitoring, AI-powered crop recommendations, and smart farming analytics." />
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://github.com/debarghya17/UI-Elements/blob/main/agriastrax%20logo.png?raw=true" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@agriastrax" />
+    <meta name="twitter:site" content="@smartagritechdashboard" />
     <meta name="twitter:image" content="https://github.com/debarghya17/UI-Elements/blob/main/agriastrax%20logo.png?raw=true" />
     
     <!-- Google Translate Widget Script -->
